--- a/warship-studio-website/src/app/globals.css
+++ b/warship-studio-website/src/app/globals.css
@@ -1,5 +1,19 @@
 @import 'tailwindcss';
 
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.animate-scroll {
+    animation: scroll 1s linear infinite;
+}
+
+
 :root {
     --font-satoshi: 'Satoshi', sans-serif;
     --font-geistMono: 'GeistMono', sans-serif;
