--- a/warship-studio-website/src/app/globals.css
+++ b/warship-studio-website/src/app/globals.css
@@ -34,9 +34,41 @@ body {
     background-color: white;
 }
 
-html,
+/* html,
 body {
     cursor:
-        url('/warship-logo.svg') 8 8,
+        url('/warship-logo.svg') 30 30,
         auto;
+} */
+
+.animated-link {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.animated-link::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px; /* This is your border line */
+    background-color: black; /* Or whatever color you want the border to be */
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease-out;
+}
+
+.animated-link:hover::before {
+    transform: scaleX(
+        1
+    ); /* On hover, the border line scales in from the left */
+}
+
+.animated-link:not(:hover)::before {
+    transform-origin: right;
+    transform: scaleX(
+        0
+    ); /* On mouse leave, the line continues off to the right and disappears */
 }
