made the carousels functional, and also took out scrollbar from web

--- a/warship-studio-website/src/app/globals.css
+++ b/warship-studio-website/src/app/globals.css
@@ -72,3 +72,7 @@ body {
         0
     ); /* On mouse leave, the line continues off to the right and disappears */
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
