--- a/warship-studio-website/src/app/globals.css
+++ b/warship-studio-website/src/app/globals.css
@@ -54,7 +54,7 @@ body {
     left: 0;
     width: 100%;
     height: 1px; /* This is your border line */
-    background-color: black; /* Or whatever color you want the border to be */
+    background-color: #07e272; /* Or whatever color you want the border to be */
     transform: scaleX(0);
     transform-origin: left;
     transition: transform 0.3s ease-out;
@@ -76,3 +76,5 @@ body {
 ::-webkit-scrollbar {
     display: none;
 }
+
+/* grid-template-columns: repeat(auto-fit, minmax(Xpx, 1fr)) */
