Added mailchimp for Newletter and Emailjs for Email requests, and some Strapi image fixes

--- a/warship-studio-website/src/app/globals.css
+++ b/warship-studio-website/src/app/globals.css
@@ -13,6 +13,9 @@
     animation: scroll 90s linear infinite;
 }
 
+.animate-scroll:hover {
+    animation-play-state: paused; /* pause on hover */
+}
 .pause-zone:hover .animate-scroll {
     animation-play-state: paused;
 }
